crates/oxc_codegen/tests/integration/snapshots/astro/import_meta_env.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
---
import Header from '../../components/Header.jsx'
import Footer from '../../components/Footer.astro'
import ProductPageContent from '../../components/ProductPageContent.jsx';

export async function getStaticPaths() {
  let products = await fetch(`${import.meta.env.PUBLIC_NETLIFY_URL}/.netlify/functions/get-product-list`)
    .then(res => res.json()).then((response) => {
      console.log('--- built product pages ---')
      return response.products.edges
    });

  return products.map((p, i) => {
    return {
      params: {pid: p.node.handle},
      props: {product: p},
    };
  });
}

const { product } = Astro.props;
---

<!doctype html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Shoperoni | Buy {product.node.title}</title>

  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
  <link rel="stylesheet" href="/style/global.css">
</head>
<body>
  <Header />
  <div class="product-page">
    <article>
      <ProductPageContent client:visible product={product.node} />
    </article>
  </div>
  <Footer />
</body>
</html>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";
import Header from "../../components/Header.jsx"

import Footer from "../../components/Footer.astro"

import ProductPageContent from "../../components/ProductPageContent.jsx";

import * as $$module1 from "../../components/Header.jsx";
import * as $$module2 from "../../components/Footer.astro";
import * as $$module3 from "../../components/ProductPageContent.jsx";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [{ module: $$module1, specifier: "../../components/Header.jsx", assert: {} }, { module: $$module2, specifier: "../../components/Footer.astro", assert: {} }, { module: $$module3, specifier: "../../components/ProductPageContent.jsx", assert: {} }], hydratedComponents: [ProductPageContent], clientOnlyComponents: [], hydrationDirectives: new Set(["visible"]), hoisted: [] });

const $$Astro = $$createAstro("https://astro.build");
const Astro = $$Astro;
export async function getStaticPaths() {
  let products = await fetch(`${import.meta.env.PUBLIC_NETLIFY_URL}/.netlify/functions/get-product-list`)
    .then(res => res.json()).then((response) => {
      console.log("--- built product pages ---")
      return response.products.edges
    });

  return products.map((p, i) => {
    return {
      params: {pid: p.node.handle},
      props: {product: p},
    };
  });
}
const $$Component = $$createComponent(async ($$result, $$props, $$slots) => {
const Astro = $$result.createAstro($$Astro, $$props, $$slots);
Astro.self = $$Component;

const { product } = Astro.props;

return $$render`<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Shoperoni | Buy ${product.node.title}</title>

  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
  <link rel="stylesheet" href="/style/global.css">
${$$renderHead($$result)}</head>
<body>
  ${$$renderComponent($$result,"Header",Header,{})}
  <div class="product-page">
    <article>
      ${$$renderComponent($$result,"ProductPageContent",ProductPageContent,{"client:visible":true,"product":(product.node),"client:component-hydration":"visible","client:component-path":("../../components/ProductPageContent.jsx"),"client:component-export":("default")})}
    </article>
  </div>
  ${$$renderComponent($$result,"Footer",Footer,{})}
</body></html>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";
import Header from "../../components/Header.jsx";
import Footer from "../../components/Footer.astro";
import ProductPageContent from "../../components/ProductPageContent.jsx";

import * as $$module1 from "../../components/Header.jsx";
import * as $$module2 from "../../components/Footer.astro";
import * as $$module3 from "../../components/ProductPageContent.jsx";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [{ module: $$module1, specifier: "../../components/Header.jsx", assert: {} }, { module: $$module2, specifier: "../../components/Footer.astro", assert: {} }, { module: $$module3, specifier: "../../components/ProductPageContent.jsx", assert: {} }], hydratedComponents: [ProductPageContent], clientOnlyComponents: [], hydrationDirectives: new Set(["visible"]), hoisted: [] });

const $$Astro = $$createAstro("https://astro.build");
const Astro = $$Astro;
export async function getStaticPaths() {
	let products = await fetch(`${import.meta.env.PUBLIC_NETLIFY_URL}/.netlify/functions/get-product-list`).then((res) => res.json()).then((response) => {
		console.log("--- built product pages ---");
		return response.products.edges;
	});
	return products.map((p, i) => {
		return {
			params: { pid: p.node.handle },
			props: { product: p }
		};
	});
}
const $$Component = $$createComponent(async ($$result, $$props, $$slots) => {
const Astro = $$result.createAstro($$Astro, $$props, $$slots);
Astro.self = $$Component;

const { product } = Astro.props;

return $$render`<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Shoperoni | Buy ${product.node.title}</title>

  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
  <link rel="stylesheet" href="/style/global.css">
${$$renderHead($$result)}</head>
<body>
  ${$$renderComponent($$result,"Header",Header,{})}
  <div class="product-page">
    <article>
      ${$$renderComponent($$result,"ProductPageContent",ProductPageContent,{"client:visible":true,"product":(product.node),"client:component-hydration":"visible","client:component-path":("../../components/ProductPageContent.jsx"),"client:component-export":("default")})}
    </article>
  </div>
  ${$$renderComponent($$result,"Footer",Footer,{})}
</body>
</html>`;
}, undefined, undefined);
export default $$Component;

